# qor-runtime

./: .gitignore  .gitlint  .rustfmt.toml  Cargo.toml  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-qor-runtime  bazel-testlogs  devenv.nix  index.html  rustfmt.toml
.githooks/: pre-commit
.github/actions/gitlint/: action.yml
.github/workflows/: cargo_build.yml  cargo_clippy.yml  cargo_fmt.yml  cargo_test.yml  gitlint.yml  miri.yml  rust-docs.yml  rust.yml  rustfmt.yml  sphinx-docs.yml
async_runtime/: BUILD  Cargo.toml
async_runtime/examples/: mpmc.rs  playground.rs
async_runtime/src/: lib.rs
async_runtime/src/core/: mod.rs  types.rs
async_runtime/src/futures/: mod.rs  reusable_box_future.rs  yield_now.rs
async_runtime/src/runtime/: mod.rs  runtime.rs
async_runtime/src/scheduler/: context.rs  execution_engine.rs  join_handle.rs  mod.rs  scheduler.rs  waker.rs  worker.rs  worker_types.rs
cargo-docs/: cargo_docs.json
cargo-docs/cargo-doc-PR3/: help.html  src-files.js
cargo-docs/cargo-doc-PR3/qor_core/: index.html  sidebar-items.js  struct.Version.html
cargo-docs/cargo-doc-PR3/qor_os/: index.html  sidebar-items.js
cargo-docs/cargo-doc-PR3/qor_rto/: all.html  enum.ExecutionState.html  index.html  sidebar-items.js  struct.AccurateClock.html  struct.And.html  struct.Await.html  struct.Break.html  struct.Concurrency.html  struct.Div.html  struct.Engine.html  struct.Eq.html  struct.ExecutionException.html  struct.ExecutionExceptionFilter.html  struct.ForRange.html  struct.Gt.html  struct.Gte.html  struct.IfThenElse.html  struct.Listener.html  struct.Loop.html  struct.Lt.html  struct.Notifier.html  struct.Or.html  struct.Program.html  struct.Sequence.html  struct.SingleListen.html  struct.SingleNotify.html  struct.StateStorage.html  struct.Task.html  struct.TaskHandle.html  struct.Throw.html  struct.Trigger.html  struct.TryCatch.html  struct.VariableStorage.html  struct.Xor.html  trait.Action.html  trait.EventAdapter.html  trait.Listen.html  trait.RValue.html  trait.Variable.html  (+5 more)
cargo-docs/cargo-doc-PR5/: help.html  settings.html
cargo-docs/cargo-doc-PR5/async_runtime/: fn.spawn.html  index.html  sidebar-items.js
cargo-docs/cargo-doc-PR5/logging_tracing/: all.html  enum.LogMode.html  enum.TraceScope.html  index.html  struct.TracingLibrary.html
cargo-docs/cargo-doc-PR5/orchestration/: all.html
cargo-docs/cargo-doc-PR6/: search-index.js  src-files.js
cargo-docs/cargo-doc-PR6/async_runtime/: all.html  fn.spawn_from_boxed.html
cargo-docs/cargo-doc-PR6/foundation/: all.html  index.html  sidebar-items.js
cargo-docs/cargo-doc-PR6/logging_tracing/: sidebar-items.js  struct.TracingLibraryBuilder.html
cargo-docs/cargo-doc-PR6/orchestration/: fn.sub.html  index.html  sidebar-items.js
cargo-docs/cargo-doc-PR7/: crates.js  help.html  search-index.js  settings.html
cargo-docs/cargo-doc-PR7/async_runtime/: all.html  fn.spawn.html  fn.spawn_from_boxed.html  index.html
cargo-docs/cargo-doc-main/: crates.js  search-index.js  settings.html
cargo-docs/cargo-doc-main/qor_core/: all.html  (+3 more)
doc/: error_handling.md  high_level_design.md  iceoryx2_mapping.md
doc/assets/: api_proposal.rs
foundation/: BUILD  Cargo.toml
foundation/src/: lib.rs  prelude.rs  types.rs
foundation/src/base/: fast_rand.rs  mod.rs
foundation/src/containers/: mod.rs  mpmc_queue.rs  spmc_queue.rs
foundation/src/threading/: mod.rs  thread_wait_barrier.rs
integration_tests/: Cargo.toml
integration_tests/tests/: integration_example.rs  mpmc.rs
logging_tracing/: BUILD  Cargo.toml  README.md
logging_tracing/configs/: perfetto.cfg
logging_tracing/examples/: hello_tracing.rs
logging_tracing/src/: lib.rs  prelude.rs
orchestration/: BUILD  Cargo.toml
orchestration/examples/: basic.rs  sync_ipc.rs
orchestration/src/: lib.rs  prelude.rs  program.rs
orchestration/src/actions/: action.rs  concurrency.rs  event.rs  invoke.rs  mod.rs  sequence.rs  sync.rs  trigger.rs
orchestration/src/core/: mod.rs  runtime_seq_acc.rs
qor-core/: Cargo.toml  build.rs
qor-core/src/: component.rs  config.rs  core_errors.rs  hash.rs  id.rs  json.rs  lib.rs  types.rs
qor-os/: Cargo.toml
qor-os/src/: filesystem.rs  lib.rs  mem.rs  os_errors.rs
qor-rto/: Cargo.toml
qor-rto/.cargo/: config.toml
qor-rto/examples/: hello_async_world.rs  hello_loop.rs  hello_program.rs  hello_task_result.rs  hello_tasks.rs  hello_world.rs  loop_concurrency.rs  pt1_control.rs  pt1_control.xlsx  task_chain.rs  thread_stress.rs
qor-rto/src/: actions.rs  base.rs  event.rs  executor.rs  expressions.rs  lib.rs  program.rs  rto_errors.rs  task.rs  variables.rs  waker.rs
scripts/: perfetto.sh  run_tracing_daemon.sh
sphinx-docs/: sphinx_docs.json
sphinx-docs/sphinx-doc-PR4/: objects.inv  searchindex.js
sphinx-docs/sphinx-doc-main/: genindex.html  index.html  search.html  searchindex.js
(+914 files in other folders)
