
module(
    name = "qor-runtime",
    version = "0.1",
    compatibility_level = 0,
)

# Rust setup
bazel_dep(name = "rules_rust", version = "0.58.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.85.0"],
)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//:foundation/Cargo.toml",
        "//:async_runtime/Cargo.toml",
        "//:integration_tests/Cargo.toml",
        "//:logging_tracing/Cargo.toml",
        "//:orchestration/Cargo.toml",
    ],
)
use_repo(crate, "crates")
