[package]
name = "foundation"
version.workspace = true
edition.workspace = true

[dependencies]
iceoryx2-bb-container.workspace = true
iceoryx2-bb-derive-macros.workspace = true
iceoryx2-bb-elementary.workspace = true
iceoryx2-bb-lock-free.workspace = true
iceoryx2-bb-memory.workspace = true
iceoryx2-bb-posix.workspace = true
iceoryx2-bb-system-types.workspace = true
iceoryx2-bb-testing.workspace = true
iceoryx2-bb-threadsafe.workspace = true
iceoryx2-pal-concurrency-sync.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
