[package]
name = "logging_tracing"
version.workspace = true
edition.workspace = true

[dependencies]
#bytes.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-perfetto-sdk-schema.workspace = true
tracing-perfetto-sdk-layer.workspace = true
tracing-subscriber.workspace = true
