[package]
name = "orchestration"
version = "0.1.0"
edition = "2021"

[dependencies]
async_runtime = { path = "../async_runtime" }
foundation = { path = "../foundation" }
logging_tracing = { path = "../logging_tracing" }
iceoryx2 = "0.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
libc = "0.2.171"